tests/semantic/invalid/expected/scope_error.txt
semantic error: необъявленный идентификатор - идентификатор 'x' не объявлен
  --> tests/semantic/invalid/scope_error.src:6:5
6  x = 20;
   ^
   = идентификатор: 'x'
   = подсказка: проверьте, объявлена ли переменная 'x' в текущей области видимости

semantic error: несоответствие типов - несоответствие типов в присваивании
  --> tests/semantic/invalid/scope_error.src:6:5
6  x = 20;
   ^

